--- a/framework/mock/instances/inst1.yml
+++ b/framework/mock/instances/inst1.yml
@@ -1,6 +1,6 @@
-:state: running
+:state: RUNNING
 :image_id: img3
 :owner_id: mockuser
-:public_address: 123.123.123.123
-:private_address: 10.10.10.10
+:public_address: img3.inst1.public.com
+:private_address: img3.inst1.private.com
 :flavor_id: m1-small
