--- a/framework/mock/instances/inst2.yml
+++ b/framework/mock/instances/inst2.yml
@@ -1,6 +1,6 @@
-:state: running
+:state: RUNNING
 :image_id: img1
 :owner_id: anotheruser
-:public_address: 123.123.123.123
-:private_address: 10.10.10.10
+:public_address: img1.inst2.public.com
+:private_address: img1.inst2.private.com
 :flavor_id: m1-small
