Moving client test-data to the client repository.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962018 13f79535-47bb-0310-9956-ffa450edef68

--- a/client-ruby/Rakefile
+++ b/client-ruby/Rakefile
@@ -6,3 +6,14 @@ desc "Run all examples"
 Spec::Rake::SpecTask.new('spec') do |t|
   t.spec_files = FileList['specs/**/*_spec.rb']
 end
+
+desc "Setup Fixtures"
+task 'fixtures' do
+  FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
+  FileUtils.cp_r( File.dirname( __FILE__ ) + '/specs/fixtures', File.dirname( __FILE__ ) + '/specs/data' )
+end
+
+desc "Clean Fixtures"
+task 'fixtures:clean' do
+  FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
+end
