--- a/client/Rakefile
+++ b/client/Rakefile
@@ -22,6 +22,9 @@ require 'spec/rake/spectask'
 desc "Run all examples"
 Spec::Rake::SpecTask.new('spec') do |t|
   t.spec_files = FileList['specs/**/*_spec.rb']
+  t.spec_opts = [
+    '--format html:spec_report.html'
+  ]
 end
 
 desc "Setup Fixtures"
