Output from cucumber is now saved into server/tmp
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962258 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -39,7 +39,7 @@ Rake::TestTask.new("test") { |t|
 
 
 Cucumber::Rake::Task.new(:features) do |t|
-  t.cucumber_opts = "features --format html --out cucumber.html"
+  t.cucumber_opts = "features --format html --out tmp/cucumber.html"
   t.rcov = false
 end
 
