Added EC2 Mock driver
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962260 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -43,7 +43,8 @@ Cucumber::Rake::Task.new(:features) do |t|
   t.rcov = false
 end
 
-Cucumber::Rake::Task.new(:rcow) do |t|
+Cucumber::Rake::Task.new(:rcov) do |t|
   t.cucumber_opts = "features --format pretty"
   t.rcov = true
+  t.rcov_opts << %[-o "tmp/coverage"]
 end
