--- a/server/features/support/ec2/config.yaml
+++ b/server/features/support/ec2/config.yaml
@@ -1,17 +1,20 @@
 --- 
+:username: mockuser
+:password: mockpassword
 :storage_snapshot_id: snap-72a5401b
 :driver_name: ec2
 :instances_count: 2
 :flavor_arch: x86_64
 :storage_snapshot_state: AVAILABLE
 :realm_id: us-east-1a
-:instance_1_name: 1268827159 testing instance
+:instance_1_name: ami-e4b6538d
 :image_owner: "522821470517"
 :storage_snapshot_count: "2"
 :realm_state: AVAILABLE
-:instance_2_name: 1268827160 testing instance
+:instance_2_name: ami-e4b6538d
 :image_arch: i386
 :storage_volume_id: vol-60957009
+:storage_volume_instance: i-123f1234
 :realm_count: 3
 :instance_image_id: ami-e4b6538d
 :image_id: ami-e4b6538d
