Added GemPackageTask into RakeFile
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962265 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -21,6 +21,7 @@
 require 'rake'
 require 'cucumber'
 require 'rake/testtask'
+require 'rake/gempackagetask'
 require 'cucumber/rake/task'
 
 desc "Run basic unit tests"
@@ -46,6 +47,11 @@ Cucumber::Rake::Task.new(:rcov) do |t|
   t.cucumber_opts = "features --format pretty"
   t.rcov = true
   t.rcov_opts << %[-o "tmp/coverage"]
+end
+
+load 'deltacloud-core.gemspec'
+Rake::GemPackageTask.new(@spec) do |pkg|
+  pkg.need_tar = true
 end
 
 desc "Install API"
