Mock driver: store an instance profile on instance creation
Adapt the initial data and add a sample instance that overrides a HWP
property

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962289 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/lib/deltacloud/drivers/mock/data/instances/inst2.yml
+++ b/server/lib/deltacloud/drivers/mock/data/instances/inst2.yml
@@ -6,3 +6,5 @@
 :private_addresses: [ img1.inst2.private.com ]
 :flavor_id: m1-small
 :realm_id: us
+:instance_profile: !ruby/object:InstanceProfile
+  id: m1-large
