--- a/client/specs/fixtures/instances/inst2.yml
+++ b/client/specs/fixtures/instances/inst2.yml
@@ -6,3 +6,5 @@
 :private_addresses: [ img1.inst2.private.com ]
 :flavor_id: m1-small
 :realm_id: us
+:instance_profile: !ruby/object:InstanceProfile
+  id: m1-large
