Added rake junit for generating JUnit reports from cucumber
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962314 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -51,6 +51,11 @@ begin
     t.rcov = true
     t.rcov_opts << %[-o "tmp/coverage"]
   end
+
+  Cucumber::Rake::Task.new(:junit) do |t|
+    t.cucumber_opts = "features --format junit --out tmp/junit"
+  end
+
 rescue LoadError
   desc 'Cucumber rake task not available'
   task :features do
