Added RCov to rake junit task
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962316 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -54,6 +54,8 @@ begin
 
   Cucumber::Rake::Task.new(:junit) do |t|
     t.cucumber_opts = "features --format junit --out tmp/junit"
+    t.rcov = true
+    t.rcov_opts << %[-o "tmp/coverage"]
   end
 
 rescue LoadError
