--- a/tests/Rakefile
+++ b/tests/Rakefile
@@ -25,7 +25,7 @@ require 'cucumber/rake/task'
 DRIVER=ENV['API_DRIVER'] || 'mock'
 
 Cucumber::Rake::Task.new(:features) do |t|
-  t.cucumber_opts = "../tests/#{DRIVER} --format html --out tmp/cucumber_#{DRIVER}.html"
+  t.cucumber_opts = "../tests/#{DRIVER} --format html --out ../tests/tmp/cucumber_#{DRIVER}.html"
   t.rcov = false
 end
 
@@ -37,9 +37,9 @@ end
 Cucumber::Rake::Task.new(:rcov) do |t|
   t.cucumber_opts = "../tests/#{DRIVER} --format pretty"
   t.rcov = true
-  t.rcov_opts << %[-o "tmp/coverage_#{DRIVER}"]
+  t.rcov_opts << %[-o "../tests/tmp/coverage_#{DRIVER}"]
 end
 
 Cucumber::Rake::Task.new(:junit) do |t|
-  t.cucumber_opts = "../tests/#{DRIVER} --format junit --out tmp/junit_#{DRIVER}"
+  t.cucumber_opts = "../tests/#{DRIVER} --format junit --out #{File.join(File.dirname(__FILE__), "tmp", "junit_#{DRIVER}")}"
 end
