--- a/client/Rakefile
+++ b/client/Rakefile
@@ -15,9 +15,14 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 
-
+require 'rake/gempackagetask'
 require 'spec/rake/spectask'
 
+load 'deltacloud-client.gemspec'
+
+Rake::GemPackageTask.new(@spec) do |pkg|
+  pkg.need_tar = true
+end
 
 desc "Run all examples"
 Spec::Rake::SpecTask.new('spec') do |t|
