Added ci_reporter for Hudson
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@963971 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -23,6 +23,11 @@ require 'rake'
 require 'rake/testtask'
 require 'rake/gempackagetask'
 
+begin
+  require 'ci/reporter/rake/test_unit'
+rescue LoadError
+end
+
 desc "Run basic unit tests"
 Rake::TestTask.new("test") { |t|
   t.test_files = FileList[
