Added ci_formatter for Hudson
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1003009 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/Rakefile
+++ b/client/Rakefile
@@ -54,3 +54,8 @@ desc "Clean Fixtures"
 task 'fixtures:clean' do
   FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
 end
+
+begin
+  require 'ci/reporter/rake/test_unit'
+rescue LoadError
+end
