Fixed yard dependency
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1003102 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -48,7 +48,7 @@ begin
   YARD::Rake::YardocTask.new do |t|
     t.files   = ['lib/**/*.rb', '*.rb']   # optional
   end
-rescue
+rescue LoadError
 end
 
 @specs = ['ruby', 'java'].inject({}) do |hash, spec_platform|
