client: build only one gem for both JRuby and MRI
Bump the requirement for Nokogiri to one that also works under JRuby. Also
bump rest-client requirement, since tests fail with rest-client 1.4.2

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1028141 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/Rakefile
+++ b/client/Rakefile
@@ -25,15 +25,9 @@ task 'documentation' do
   load 'lib/documentation.rb'
 end
 
-@specs = ['ruby', 'java'].inject({}) do |hash, spec_platform|
-  $platform = spec_platform
-  hash.update(spec_platform => Gem::Specification.load('deltacloud-client.gemspec'))
-end
-
-@specs.values.each do |spec|
-  Rake::GemPackageTask.new(spec) do |pkg|
-    pkg.need_tar = true
-  end
+spec = Gem::Specification.load('deltacloud-client.gemspec')
+Rake::GemPackageTask.new(spec) do |pkg|
+  pkg.need_tar = true
 end
 
 if Gem.available?('rspec')
