Revamped using 'cloudservers' gem (thanks Rackspace!)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1071575 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -16,12 +16,21 @@ group :linode do
 end
 
 group :amazon do
-  gem 'right_aws'
-  gem 'amazon-ec2'
+  gem 'aws'
 end
 
 group 'terremark' do
   gem 'fog'
+  gem 'excon'
+end
+
+group :azure do
+  gem 'waz-blobs'
+end
+
+group :rackspace do
+  gem 'cloudservers'
+  gem 'cloudfiles'
 end
 
 group :test do
