Brings mock driver and yml up-to-date with the blobstore (incl. metadata)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1072149 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob5.yml
+++ b/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob5.yml
@@ -1,5 +1,7 @@
 :bucket: bucket2
-:content_length: 651922
+:content_length: 17
 :content_type: application/pdf
 :last_modified: 2009-07-21 11:12:13 +0100
-:content: "content of blob 5"
+:content:
+    content of blob 5
+:user_metadata: ''
