--- a/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob1.yml
+++ b/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob1.yml
@@ -1,5 +1,8 @@
-:bucket: bucket1
-:content_length: 12627
+---
 :content_type: text/plain
+:content_length: 17
+:bucket: bucket1
+:user_metadata:
+  SOMENEWKEY: NEWVALUE
 :last_modified: 2010-09-23 16:44:54 +0100
-:content: "content of blob 1"
+:content: content of blob 1
