--- a/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob2.yml
+++ b/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob2.yml
@@ -1,5 +1,8 @@
-:bucket: bucket1
-:content_length: 4420
+--- 
+:user_metadata: 
+  VERSION: "1.2"
 :content_type: text/html
+:content_length: 56
+:bucket: bucket1
 :last_modified: 2010-09-23 16:55:05 +0100
-:content: "content of blob 2"
+:content: <html><head></head><body>content of blob 2</body></html>
