--- a/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob3.yml
+++ b/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob3.yml
@@ -1,5 +1,7 @@
 :bucket: bucket1
-:content_length: 98732
+:content_length: 17
 :content_type: text/plain
 :last_modified: 2010-08-14 02:14:31 +0100
-:content: "content of blob 3"
+:content:
+    content of blob 3
+:user_metadata: ''
