--- a/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob4.yml
+++ b/server/lib/deltacloud/drivers/mock/data/buckets/blobs/blob4.yml
@@ -1,5 +1,8 @@
 :bucket: bucket2
-:content_length: 983232
+:content_length: 17
 :content_type: application/octet-stream
 :last_modified: 2010-09-21 06:17:24 +0100
-:content: "content of blob 4"
+:content:
+    content of blob 4
+:user_metadata:
+    some: "value"
