RHEV-M fixes (realms, client). Instance UI enhancements (images, ID shortening)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1076159 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/config/drivers.yaml
+++ b/server/config/drivers.yaml
@@ -5,6 +5,9 @@
   :name: Mock
 :rhevm: 
   :name: RHEVM
+  :entrypoints:
+    default:
+      default: "https://rhev-dc.lab.eng.brq.redhat.com:8443/rhevm-api-powershell"
 :rimuhosting: 
   :name: RimuHosting
 :opennebula: 
