Adds some tests and a fix for plain_formatter for deltacloudc (via Michal Fojtik)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1080737 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/Rakefile
+++ b/client/Rakefile
@@ -17,6 +17,7 @@
 # under the License.
 
 require 'rake/gempackagetask'
+require 'rake/testtask'
 
 load 'deltacloud-client.gemspec'
 
@@ -24,6 +25,7 @@ desc "Generate documentation"
 task 'documentation' do
   load 'lib/documentation.rb'
 end
+
 
 spec = Gem::Specification.load('deltacloud-client.gemspec')
 Rake::GemPackageTask.new(spec) do |pkg|
@@ -42,6 +44,14 @@ desc "Setup Fixtures"
 task 'fixtures' do
   FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
   FileUtils.cp_r( File.dirname( __FILE__ ) + '/specs/fixtures', File.dirname( __FILE__ ) + '/specs/data' )
+end
+
+namespace :test do
+  Rake::TestTask.new(:cmd) do |t|
+    t.libs << "tests"
+    t.test_files = FileList['tests/cmd.rb']
+    t.verbose = true
+  end
 end
 
 desc "Clean Fixtures"
